feat: 🎸 修改为pnpm monorepo进行包管理

--- a/packages/command/package.json
+++ b/packages/command/package.json
@@ -10,5 +10,8 @@
             "cjs",
             "global"
         ]
+    },
+    "dependencies": {
+        "@ziqian/lib": "workspace:^"
     }
 }
