--- a/package.json
+++ b/package.json
@@ -35,14 +35,12 @@
   },
   "homepage": "https://github.com/username/repository#readme",
   "devDependencies": {
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.1.0",
     "@types/node": "^20.5.3",
     "execa": "^7.2.0",
-    "rollup": "^3.27.2",
-    "rollup-plugin-typescript2": "^0.35.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vite": "^4.4.9",
+    "vite-plugin-dts": "^3.5.2"
   },
   "dependencies": {
     "minimist": "^1.2.8"
