--- a/packages/command/package.json
+++ b/packages/command/package.json
@@ -2,7 +2,12 @@
     "name": "@ziqian/command",
     "version": "0.0.0",
     "main": "./src/index.ts",
+    
     "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build --config build/vite.config.ts"
+    },
     "buildOptions": {
         "name": "ZiQianCommand",
         "formats": [
