--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,5 +10,9 @@
             "cjs",
             "global"
         ]
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build --config build/vite.config.ts"
     }
 }
