--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
-    "moduleResolution": "node",
-    "paths": {
-      "@ziqian/*":[
-        "packages/*/src"
-      ]
-    },
+    "moduleResolution": "node"
   },
   "exclude": [
     "**/dist/*"
